# pare

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
_plans/Meta-ARE State Transition Apps Design/: index.html
_plans/Stateful Calendar App Design/: index.html
_plans/Stateful Contacts App Design/: index.html
_plans/Stateful Email App Design/: index.html
agents/: index.html
agents/interaction_lifecycle/: index.html
annotation/: index.html
api/: index.html
api/adapters/: index.html
api/agents/: index.html
api/annotation/: index.html
api/apps/: index.html
api/environment/: index.html
api/logging/: index.html
api/proactive_agent/: index.html
api/scenario_generator/: index.html
api/scenarios/: index.html
api/summary_and_deduplication/: index.html
api/system/: index.html
api/user_proxy/: index.html
app_api/: index.html
apps/: index.html
apps/adding_stateful_app/: index.html
apps/apartment/: index.html
apps/cab/: index.html
apps/calendar/: index.html
apps/contacts/: index.html
apps/email/: index.html
apps/messaging/: index.html
apps/notes/: index.html
apps/reminder/: index.html
apps/shopping/: index.html
architecture_visual/: index.html
data/: metaare_augmentation_data.json  models.txt  noise_subset.txt
data/samples/: human_study_v1.parquet
data/splits/: ablation.txt  full.txt
dec_pomdp_formulation/: index.html
docs/: StatefulUserAgent重构计划.md  app_api.md  architecture_visual.md  dec_pomdp_formulation.md  generate-scenario.md  index.md  interface-guide.md  modules.md  multi_step_scenario_generator_flow.md  proactive_agent_guide.md  run_local_llm_model.md  runtime_execution.md  runtime_execution_flow.md  runtime_spine.md  scenario_author_guide.md  scenario_generator.md  stackelberg_pomdp_formulation.md  trace_export.md  user_proxy_guide.md  user_proxy重构计划（已经弃用）.md  重构铁律.md
docs/_plans/: Annotation Interface Design.md  App Implementation Inconsistencies.md  Duplicate Logs Fix Design.md  Fix Environmental Noise Timing.md  Fix go_back Double-Pop Bug.md  Human-in-the-Loop TUI Design.md  Meta-ARE State Transition Apps Design.md  Noise System Integration Feature Request.md  PAS Scenario Runner Config Design.md  Single-Agent Proactive Feature Design.md  Stateful Calendar App Design.md  Stateful Contacts App Design.md  Stateful Email App Design.md  Stateful Note App Design.md  Two-Agent Proactive System Design.md  notes for understanding meta are repo.md
docs/agents/: index.md  interaction_lifecycle.md
docs/annotation/: index.md
docs/api/: adapters.md  agents.md  annotation.md  apps.md  environment.md  index.md  logging.md  proactive_agent.md  scenario_generator.md  scenarios.md  summary_and_deduplication.md  system.md  user_proxy.md
docs/apps/: adding_stateful_app.md  apartment.md  cab.md  calendar.md  contacts.md  doordash.md  email.md  food_delivery.md  index.md  messaging.md  note.md  notes.md  payment.md  reminder.md  shopping.md
docs/scenarios/: authoring.md  benchmark.md  cli_usage.md  index.md  scenario_generator.md  scenario_generator_flow.md  scenarios.md  summary_and_deduplication.md
docs/scripts/: index.md
github_actions/workflows/: main.yml
interface-guide/: index.html
modules/: index.html
pare/: constants.py  environment.py  logging_config.py  main.py  multi_scenario_runner.py  notification_system.py  scenario_runner.py
pare/_archives/: single_agent.py  test_meta_adapter.py
pare/agents/: agent_builder.py  agent_config_builder.py  agent_factory.py  agent_log.py  pare_agent_config.py
pare/annotation/: __init__.py  evaluator.py  metrics.py  models.py  observation_formatter.py  sampler.py  server.py
pare/apps/: __init__.py  core.py  proactive_aui.py  system.py  tool_decorators.py
pare/benchmark/: report_stats.py  scenario_executor.py  scenario_loader.py
pare/cli/: annotation.py  (+4 more)
pas/: __init__.py  constants.py  environment.py  logging_config.py  logging_utils.py  main.py  meta_adapter.py  multi_scenario_runner.py  notification_system.py  notifications.py  oracles.py  scenario_runner.py
proactive_agent_guide/: index.html
run_local_llm_model/: index.html
runtime_execution/: index.html
runtime_execution_flow/: index.html
scenario_author_guide/: index.html
scenario_generator/: index.html
scenarios/: index.html
scripts/: analyze_app_usage.py  analyze_metrics.py  create_review_csvs.py  create_stratified_sample.py  download_metaare_augmentation.py  fix_cached_acceptance_counts.py  index.html  inspect_metaare_augmentation.py  prototype_trace_parser.py  prototype_trace_parser_v2.py  run_scenarios.py  run_two_agent_demo.py  validate_scenarios.sh
search/: search_index.json
stackelberg_pomdp_formulation/: index.html
tests/: test_calendar_states.py  test_contacts_environment.py  test_contacts_scenario.py  test_contacts_states.py  test_decision_maker.py  test_email_states.py  test_environment_navigation.py  test_foo.py  test_llm_plan_executor.py  test_messaging_states.py  test_meta_adapter.py  test_react_adapter.py  test_reminder_states.py  test_stateful_messaging_tools.py  test_stateful_user_proxy.py
trace_export/: index.html
user_proxy_guide/: index.html
(+1044 files in other folders)
