[project]
name = "ProactiveAgentSandbox"
version = "0.0.1"
description = "This repository contains code for the Proactive Goal Inference and Sandbox project in collaboration with Apple."
authors = [
    { name = "Deepak Nathani", email = "dnathani@ucsb.edu" },
]
readme = "README.md"
keywords = ['python']
requires-python = ">=3.12,<4.0"
classifiers = [
    "Intended Audience :: Developers",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "meta-agents-research-environments",
    "litellm>=1.0.0",
    "python-dotenv>=1.0.0",
    "jinja2>=3.1.6",
    "numpy>=2.2.6",
    "pytz>=2025.2",
    "boto3>=1.40.70",
]

[project.urls]
Homepage = "https://deepakn97.github.io/pas/"
Repository = "https://github.com/deepakn97/pas"
Documentation = "https://deepakn97.github.io/pas/"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "pre-commit>=2.20.0",
    "tox-uv>=1.11.3",
    "deptry>=0.23.0",
    "mypy>=0.991",
    "pytest-cov>=4.0.0",
    "ruff>=0.13.2",
    "mkdocs>=1.4.2",
    "mkdocs-material>=8.5.10",
    "mkdocstrings[python]>=0.26.1",
    "ipython>=9.6.0",
    "jupyter>=1.1.1",
    "types-pytz>=2025.2.0.20251108",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pas"]

[tool.mypy]
files = ["pas"]
namespace_packages = true
no_implicit_optional = true
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
# Disabled because meta-are doesn't have type stubs - would require subclassing Any
disallow_subclassing_any = false
disallow_untyped_calls = true
disallow_untyped_defs = true
extra_checks = true
implicit_reexport = false
strict_equality = true
warn_unused_configs = true
warn_redundant_casts = true
# Disabled because meta-are methods return Any without stubs
warn_return_any = false
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
show_error_codes = true
exclude = ["pas/_archives", "tests"]

# Treat meta-are as having type information (follow_imports = silent)
# Ignore all errors from meta-are since it doesn't have type stubs
[[tool.mypy.overrides]]
module = "are.*"
follow_imports = "silent"
ignore_errors = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
# Same excludes as black
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    ".github",
    ".cursorrules",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    # ---- project specific ----
    "pas/_archives",
    "tests",
]
target-version = "py312"
line-length = 120
indent-width = 4

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint]
select = [
    "ANN",  # flake8-annotations
    "YTT",  # flake8-2020
    "S", # flake8-bandit
    "B", # flake8-bugbear
    "A", # flake8-builtins
    "C4", # flake8-comprehensions
    "T10", # flake8-debugger
    "SIM", # flake8-simplify
    "PYI", # flake8-pyi
    "TCH", # flake8-type-checking
    "RUF", # Ruff-specific-rules
    "I", # isort
    "C90", # mccabe
    "E", "W", "D", # pycodestyle
    "F", # pyflakes
    "PGH", # pygrep-hooks
    "UP", # pyupgrade
    "TRY", # tryceratops
]
ignore = [
    "E722",  # Equivalent to pylint's broad-except-caught (W0718)
    "B023",  # Roughly equivalent to logging-fstring-interpolation (W1203)
    "E501",  # Line too long (handled by formatter)
    "TRY003",  # Tryceratops: long raise message
    "F841", # Unused variable (ported from ToolSandbox)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
]

fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.isort]
known-first-party = ["pas"]
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
# Ignore unused imports in all `__init__.py` files
"__init__.py" = ["F401"]

[tool.ruff.format]
preview = true
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format=true

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["pas"]

[tool.deptry]
known_first_party = ["pas"]

[tool.deptry.package_module_name_map]
"meta-agents-research-environments" = "are"

[tool.pyright]
typeCheckingMode = "off"
ignore = ["*"]

[project.entry-points."pas.scenarios"]
proactive-agent-sandbox = "pas.scenarios.registration:register_pas_scenarios"

[tool.uv.sources]
meta-agents-research-environments = { path = "../meta-are", editable = true }

[[tool.mypy.overrides]]
module = "dotenv"
ignore_missing_imports = true
